<resources>

    <!--Títulos Activity-->
    <string name="app_name">TFG - Coordinacion Servicios</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_empresa_perfil">Menu Empresa</string>
    <string name="title_activity_empresa_detalle">Detalle Empresa</string>

    <string name="title_activity_proveedor_perfil">Menu Proveedor</string>
    <string name="title_activity_proveedor_detalle">Detalle Proveedor</string>
    <string name="title_activity_proveedor_lista">Listado de Proveedores</string>

    <string name="title_activity_transaccion_nueva">Nueva Transacción</string>
    <string name="title_activity_transaccion_lista">Listado de Transacciones</string>
    <string name="title_activity_transaccion_detalle">Detalle Transacción</string>

    <!--Botones-->
    <!--content_login.xml-->
    <string name="button_info">Información</string>
    <string name="button_calendario">Calendario</string>
    <string name="button_transaccion">Transacción</string>
    <string name="button_login">Entrar</string>
    <string name="button_registro">Registrarse</string>


    <!--content_proveedor_detallexml-->
    <string name="button_descripcion">Descripción</string>
    <string name="button_guardar">Guardar</string>

    <!--content_transaccion_detallexml-->
    <string name="button_rechazar">Rechazar</string>
    <string name="button_cancelar">Cancelar Transacción</string>
    <string name="button_aceptar">Aceptar</string>

    <string name="textView_rechazada">Rechazada</string>
    <string name="textView_cancelada">Cancelada</string>
    <string name="textView_aceptada">Aceptada</string>


    <string name="button_busqueda">Búsqueda</string>

    <!--EditText y TextView
    content_login.xml-->
    <string name="textView_titulo_Login">Coordinación de Servicios</string>
    <string name="textView_usuario">Usuario</string>
    <string name="editText_usuario">Introduzca Email</string>
    <string name="textView_contrasena">Contraseña</string>
    <string name="editText_contrasena">Introduzca Contraseña</string>

    <!--content_empresa_detalle.xml-->
    <string name="title_empresa_registro">REGISTRO/DATOS EMPRESA</string>
    <string name="textView_cif">CIF:</string>
    <string name="editText_cif">Introduce tu CIF</string>

    <!--content_proveedor_detalle.xml-->
    <string name="title_proveedor_detalle">REGISTRO/DATOS PROVEEDOR</string>
    <string name="textView_nombre">Nombre: </string>
    <string name="editText_nombre">Indica tu Nombre o Razón Social</string>
    <string name="textView_dni">DNI: </string>
    <string name="editText_dni">Indica tu DNI o CIF</string>
    <string name="textView_email">Email: </string>
    <string name="editText_email">Indica tu Correo Electrónico</string>
    <string name="textView_direccion">Dirección: </string>
    <string name="editText_direccion">Indica tu Dirección</string>
    <string name="textView_poblacion">Población: </string>
    <string name="editText_poblacion">Indica tu Población</string>
    <string name="textView_provincia">Provincia: </string>
    <string name="editText_provincia">Indica tu Provincia</string>
    <string name="textView_telefono">Teléfono: </string>
    <string name="editText_telefono">Indica tu Teléfono</string>
    <string name="textView_movil">Móvil: </string>
    <string name="editText_movil">Indica tu Móvil</string>
    <string name="textView_profesion">Profesión: </string>
    <string name="editText_profesion">Indica tu Profesión/Oficio</string>
    <string name="textView_pHora">P. Hora: </string>
    <string name="editText_precioHora">Indica tu Coste Horario</string>
    <string name="textView_euro"> " €"</string>

    <!--content_transaccion_nueva.xml-->
    <string name="title_transaccion_nueva">CONTRATACIÓN DE SERVICIOS</string>
    <string name="textView_fecha">Fecha: </string>
    <string name="editText_fecha">
        Introduzca la fecha prevista de ejecución</string>
    <string name="textView_direccionTrabajos">Dirección: </string>
    <string name="editText_direccionTrabajos">
        Indique la dirección donde se realizarán los trabajos</string>
    <string name="textView_pOfertado">Precio/hora ofertado: </string>
    <string name="editText_precioOfertado">Introduzca el precio/hora</string>
    <string name="editText_observaciones">
        Escriba las observaciones o detalles importantes de los trabajos a realizar</string>
    <string name="textView_observaciones">Observaciones: </string>

    <!--item_proveedor_lista.xml-->
    <string name="textView_precioHora">Precio Hora: </string>
    <string name="textView_email_lista">Correo electrónico</string>
    <string name="textView_direccion_lista">Dirección</string>
    <string name="textView_poblacion_lista">Población</string>
    <string name="textView_provincia_lista">Provincia</string>
    <string name="textView_telefono_lista">Teléfono Fijo</string>
    <string name="textView_movil_lista">Teléfono Móvil</string>
    <string name="textView_profesion_lista">Profesión</string>
    <string name="textView_precioHora_lista">Precio Hora</string>

    <!--content_transaccion_lista.xml-->
    <string name="resultados_vacios">No hay resultados</string>
    <string name="en_construccion">EN CONSTRUCCIÓN</string>
    <string name="title_activity_proveedor_calendario">ProveedorCalendarioActivity</string>
    <string name="sin_filtro">Sin filtro</string>
    <string name="title_activity_lopd">LOPDActivity</string>
    <string name="lopd_message"><u>Términos de uso y Condiciones</u></string>

    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->
    <!--<string name="textView"></string>-->
    <!--<string name="editText"></string>-->

</resources>
