<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            tools:text="Nombre o Razón Social" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/textView_email"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:text="@string/textView_email_lista"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_direccion"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:gravity="center"
            android:text="@string/textView_direccion_lista"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/poblacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/direccion"
            app:layout_constraintTop_toBottomOf="@+id/direccion"
            tools:text="@string/textView_poblacion_lista" />

        <TextView
            android:id="@+id/provincia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/poblacion"
            app:layout_constraintTop_toBottomOf="@+id/poblacion"
            tools:text="@string/textView_provincia_lista" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/textView_telefono"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telefonoFijo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="49dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:text="@string/textView_telefono_lista"
 />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/textView_movil"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="86dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:text="@string/textView_movil_lista" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/textView_profesion"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:text="@string/textView_profesion_lista" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/textView_precioHora"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/precioHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:gravity="center"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:text="@string/textView_precioHora_lista" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_euro"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>